--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -90,3 +90,66 @@ a {
     color-scheme: dark;
   }
 }
+
+.envelope {
+  width: 100%;
+  height: 250px;
+  border: 2px solid #f1ecda;
+  position: relative;
+}
+
+.flap {
+  width: 0;
+  height: 0;
+  border-left: 212px solid transparent;
+  border-right: 212px solid transparent;
+  border-top: 125px solid #f1ecda;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.heart-wrapper {
+  position: absolute;
+  right: calc(50% - 15px);
+  top: calc(50% - 15px);
+  animation: pulse 1s infinite alternate;
+}
+
+.envelope-heart {
+  width: 30px;
+  height: 30px;
+  background-color: #e95aab;
+  cursor: pointer;
+  
+  transform: rotate(-45deg);
+}
+
+.envelope-heart::before,
+.envelope-heart::after {
+  content: "";
+  position: absolute;
+  width: inherit;
+  height: inherit;
+  border-radius: 50%;
+  background-color: inherit;
+}
+
+.envelope-heart::before {
+  top: -15px;
+  left: 0;
+}
+
+.envelope-heart::after {
+  left: 15px;
+  top: 0;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0.8);
+  }
+  100% {
+    transform: scale(1.2);
+  }
+}
