--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -153,3 +153,25 @@ a {
     transform: scale(1.2);
   }
 }
+
+.MuiOutlinedInput-root {
+  background-color: transparent;
+}
+
+.MuiInputLabel-root.Mui-focused {
+  color: #f1ecda;
+}
+
+.MuiButton-root:hover {
+  background-color: #e5acc2;
+}
+
+.MuiOutlinedInput-root:hover {
+  border-color: #f1ecda;
+}
+
+.MuiOutlinedInput-notchedOutline,
+.proposal-section-wrapper:hover .MuiOutlinedInput-notchedOutline,
+.MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline {
+  border-color: #f1ecda;
+}
